# precept

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
.zed/: settings.json
src/: catalog.rs  dispatch.rs  fault.rs  function_name.rs  ghost.rs  lib.rs  macros.rs  macros_stubs.rs  random.rs
src/dispatch/: antithesis.rs  noop.rs  test.rs
